# shadow-to-think

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: mvp.yaml
data/: tiny_math.jsonl
docs/: SHADOW_TO_THINK_DESIGN.md
scripts/: analyze_shadow_outcomes.py  build_ask_gate_dataset.py  build_trace_gate_dataset.py  collect_shadow_data.py  eval_local_selector.py  eval_shadow_decode.py  eval_student_lora.py  smoke_test.py  smoke_test_v1.py  start_vllm_teacher.sh  train_hidden_selector.py  train_local_selector.py  train_student_next_token_lora.py  train_student_span_lora.py  train_trigger.py
src/shadow_to_think/: __init__.py  collector.py  data_io.py  decode_controller.py  divergence.py  eval_selector.py  features.py  generation.py  hidden_selector_model.py  models.py  selector_model.py  teacher_backend.py  train_hidden_selector.py  train_selector.py  train_trigger.py  trigger_model.py  verifier.py
